parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement_list statement
Rule 2     statement_list -> statement
Rule 3     statement -> instruction
Rule 4     statement -> repeat_statement
Rule 5     statement -> if_statement
Rule 6     statement -> ifelse_statement
Rule 7     statement -> while_statement
Rule 8     statement -> dowhile_statement
Rule 9     statement -> variable_declaration
Rule 10    statement -> procedure_definition
Rule 11    statement -> procedure_call
Rule 12    statement -> print_statement
Rule 13    instruction -> SETXY LBR expression COMMA expression RBR
Rule 14    instruction -> FORWARD expression
Rule 15    instruction -> BACK expression
Rule 16    instruction -> RIGHT expression
Rule 17    instruction -> LEFT expression
Rule 18    instruction -> SETX expression
Rule 19    instruction -> SETY expression
Rule 20    instruction -> SETH expression
Rule 21    instruction -> SPEED expression
Rule 22    instruction -> SETPS expression
Rule 23    instruction -> SETPC word
Rule 24    instruction -> SETBC word
Rule 25    instruction -> PENUP
Rule 26    instruction -> PENDOWN
Rule 27    instruction -> SHOW
Rule 28    instruction -> HIDE
Rule 29    instruction -> HOME
Rule 30    instruction -> CLEAN
Rule 31    instruction -> RESET
Rule 32    repeat_statement -> REPEAT expression LBR statement_list RBR
Rule 33    if_statement -> IF condition LBR statement_list RBR
Rule 34    ifelse_statement -> IFELSE condition LBR statement_list RBR LBR statement_list RBR
Rule 35    while_statement -> WHILE condition LBR statement_list RBR
Rule 36    dowhile_statement -> DO LBR statement_list RBR WHILE condition
Rule 37    variable_declaration -> MAKE word expression
Rule 38    procedure_definition -> TO STRING LBR parameter_list RBR statement_list END
Rule 39    parameter_list -> parameter_list COMMA parameter
Rule 40    parameter_list -> parameter
Rule 41    parameter -> name
Rule 42    parameter -> empty
Rule 43    procedure_call -> STRING LBR expression_list RBR
Rule 44    expression_list -> expression_list COMMA expression
Rule 45    expression_list -> expression
Rule 46    expression_list -> empty
Rule 47    print_statement -> PRINT word
Rule 48    print_statement -> PRINT expression
Rule 49    expression -> INT
Rule 50    expression -> FLOAT
Rule 51    expression -> name
Rule 52    expression -> REPCOUNT
Rule 53    expression -> LPAR expression RPAR
Rule 54    expression -> MINUS expression
Rule 55    expression -> RANDOM expression
Rule 56    expression -> expression TIMES expression
Rule 57    expression -> expression DIVIDE expression
Rule 58    expression -> expression PLUS expression
Rule 59    expression -> expression MINUS expression
Rule 60    expression -> expression POWER expression
Rule 61    condition -> TRUE
Rule 62    condition -> FALSE
Rule 63    condition -> expression GT expression
Rule 64    condition -> expression LT expression
Rule 65    condition -> expression GTE expression
Rule 66    condition -> expression LTE expression
Rule 67    condition -> expression EQUALS expression
Rule 68    condition -> expression NE expression
Rule 69    word -> QUOTE STRING
Rule 70    name -> COLON STRING
Rule 71    empty -> <empty>

Terminals, with rules where they appear

BACK                 : 15
CLEAN                : 30
COLON                : 70
COMMA                : 13 39 44
DIVIDE               : 57
DO                   : 36
END                  : 38
EQUALS               : 67
FALSE                : 62
FLOAT                : 50
FORWARD              : 14
GT                   : 63
GTE                  : 65
HIDE                 : 28
HOME                 : 29
IF                   : 33
IFELSE               : 34
INT                  : 49
LBR                  : 13 32 33 34 34 35 36 38 43
LEFT                 : 17
LPAR                 : 53
LT                   : 64
LTE                  : 66
MAKE                 : 37
MINUS                : 54 59
NE                   : 68
PENDOWN              : 26
PENUP                : 25
PLUS                 : 58
POWER                : 60
PRINT                : 47 48
QUOTE                : 69
RANDOM               : 55
RBR                  : 13 32 33 34 34 35 36 38 43
REPCOUNT             : 52
REPEAT               : 32
RESET                : 31
RIGHT                : 16
RPAR                 : 53
SETBC                : 24
SETH                 : 20
SETPC                : 23
SETPS                : 22
SETX                 : 18
SETXY                : 13
SETY                 : 19
SHOW                 : 27
SPEED                : 21
STRING               : 38 43 69 70
TIMES                : 56
TO                   : 38
TRUE                 : 61
WHILE                : 35 36
error                : 

Nonterminals, with rules where they appear

condition            : 33 34 35 36
dowhile_statement    : 8
empty                : 42 46
expression           : 13 13 14 15 16 17 18 19 20 21 22 32 37 44 45 48 53 54 55 56 56 57 57 58 58 59 59 60 60 63 63 64 64 65 65 66 66 67 67 68 68
expression_list      : 43 44
if_statement         : 5
ifelse_statement     : 6
instruction          : 3
name                 : 41 51
parameter            : 39 40
parameter_list       : 38 39
print_statement      : 12
procedure_call       : 11
procedure_definition : 10
repeat_statement     : 4
statement            : 1 2
statement_list       : 1 32 33 34 34 35 36 38 0
variable_declaration : 9
while_statement      : 7
word                 : 23 24 37 47

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement_list statement
    (2) statement_list -> . statement
    (3) statement -> . instruction
    (4) statement -> . repeat_statement
    (5) statement -> . if_statement
    (6) statement -> . ifelse_statement
    (7) statement -> . while_statement
    (8) statement -> . dowhile_statement
    (9) statement -> . variable_declaration
    (10) statement -> . procedure_definition
    (11) statement -> . procedure_call
    (12) statement -> . print_statement
    (13) instruction -> . SETXY LBR expression COMMA expression RBR
    (14) instruction -> . FORWARD expression
    (15) instruction -> . BACK expression
    (16) instruction -> . RIGHT expression
    (17) instruction -> . LEFT expression
    (18) instruction -> . SETX expression
    (19) instruction -> . SETY expression
    (20) instruction -> . SETH expression
    (21) instruction -> . SPEED expression
    (22) instruction -> . SETPS expression
    (23) instruction -> . SETPC word
    (24) instruction -> . SETBC word
    (25) instruction -> . PENUP
    (26) instruction -> . PENDOWN
    (27) instruction -> . SHOW
    (28) instruction -> . HIDE
    (29) instruction -> . HOME
    (30) instruction -> . CLEAN
    (31) instruction -> . RESET
    (32) repeat_statement -> . REPEAT expression LBR statement_list RBR
    (33) if_statement -> . IF condition LBR statement_list RBR
    (34) ifelse_statement -> . IFELSE condition LBR statement_list RBR LBR statement_list RBR
    (35) while_statement -> . WHILE condition LBR statement_list RBR
    (36) dowhile_statement -> . DO LBR statement_list RBR WHILE condition
    (37) variable_declaration -> . MAKE word expression
    (38) procedure_definition -> . TO STRING LBR parameter_list RBR statement_list END
    (43) procedure_call -> . STRING LBR expression_list RBR
    (47) print_statement -> . PRINT word
    (48) print_statement -> . PRINT expression

    SETXY           shift and go to state 13
    FORWARD         shift and go to state 14
    BACK            shift and go to state 15
    RIGHT           shift and go to state 16
    LEFT            shift and go to state 17
    SETX            shift and go to state 18
    SETY            shift and go to state 19
    SETH            shift and go to state 20
    SPEED           shift and go to state 21
    SETPS           shift and go to state 22
    SETPC           shift and go to state 23
    SETBC           shift and go to state 24
    PENUP           shift and go to state 25
    PENDOWN         shift and go to state 26
    SHOW            shift and go to state 27
    HIDE            shift and go to state 28
    HOME            shift and go to state 29
    CLEAN           shift and go to state 30
    RESET           shift and go to state 31
    REPEAT          shift and go to state 32
    IF              shift and go to state 33
    IFELSE          shift and go to state 34
    WHILE           shift and go to state 35
    DO              shift and go to state 36
    MAKE            shift and go to state 37
    TO              shift and go to state 38
    STRING          shift and go to state 39
    PRINT           shift and go to state 40

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    instruction                    shift and go to state 3
    repeat_statement               shift and go to state 4
    if_statement                   shift and go to state 5
    ifelse_statement               shift and go to state 6
    while_statement                shift and go to state 7
    dowhile_statement              shift and go to state 8
    variable_declaration           shift and go to state 9
    procedure_definition           shift and go to state 10
    procedure_call                 shift and go to state 11
    print_statement                shift and go to state 12

state 1

    (0) S' -> statement_list .
    (1) statement_list -> statement_list . statement
    (3) statement -> . instruction
    (4) statement -> . repeat_statement
    (5) statement -> . if_statement
    (6) statement -> . ifelse_statement
    (7) statement -> . while_statement
    (8) statement -> . dowhile_statement
    (9) statement -> . variable_declaration
    (10) statement -> . procedure_definition
    (11) statement -> . procedure_call
    (12) statement -> . print_statement
    (13) instruction -> . SETXY LBR expression COMMA expression RBR
    (14) instruction -> . FORWARD expression
    (15) instruction -> . BACK expression
    (16) instruction -> . RIGHT expression
    (17) instruction -> . LEFT expression
    (18) instruction -> . SETX expression
    (19) instruction -> . SETY expression
    (20) instruction -> . SETH expression
    (21) instruction -> . SPEED expression
    (22) instruction -> . SETPS expression
    (23) instruction -> . SETPC word
    (24) instruction -> . SETBC word
    (25) instruction -> . PENUP
    (26) instruction -> . PENDOWN
    (27) instruction -> . SHOW
    (28) instruction -> . HIDE
    (29) instruction -> . HOME
    (30) instruction -> . CLEAN
    (31) instruction -> . RESET
    (32) repeat_statement -> . REPEAT expression LBR statement_list RBR
    (33) if_statement -> . IF condition LBR statement_list RBR
    (34) ifelse_statement -> . IFELSE condition LBR statement_list RBR LBR statement_list RBR
    (35) while_statement -> . WHILE condition LBR statement_list RBR
    (36) dowhile_statement -> . DO LBR statement_list RBR WHILE condition
    (37) variable_declaration -> . MAKE word expression
    (38) procedure_definition -> . TO STRING LBR parameter_list RBR statement_list END
    (43) procedure_call -> . STRING LBR expression_list RBR
    (47) print_statement -> . PRINT word
    (48) print_statement -> . PRINT expression

    SETXY           shift and go to state 13
    FORWARD         shift and go to state 14
    BACK            shift and go to state 15
    RIGHT           shift and go to state 16
    LEFT            shift and go to state 17
    SETX            shift and go to state 18
    SETY            shift and go to state 19
    SETH            shift and go to state 20
    SPEED           shift and go to state 21
    SETPS           shift and go to state 22
    SETPC           shift and go to state 23
    SETBC           shift and go to state 24
    PENUP           shift and go to state 25
    PENDOWN         shift and go to state 26
    SHOW            shift and go to state 27
    HIDE            shift and go to state 28
    HOME            shift and go to state 29
    CLEAN           shift and go to state 30
    RESET           shift and go to state 31
    REPEAT          shift and go to state 32
    IF              shift and go to state 33
    IFELSE          shift and go to state 34
    WHILE           shift and go to state 35
    DO              shift and go to state 36
    MAKE            shift and go to state 37
    TO              shift and go to state 38
    STRING          shift and go to state 39
    PRINT           shift and go to state 40

    statement                      shift and go to state 41
    instruction                    shift and go to state 3
    repeat_statement               shift and go to state 4
    if_statement                   shift and go to state 5
    ifelse_statement               shift and go to state 6
    while_statement                shift and go to state 7
    dowhile_statement              shift and go to state 8
    variable_declaration           shift and go to state 9
    procedure_definition           shift and go to state 10
    procedure_call                 shift and go to state 11
    print_statement                shift and go to state 12

state 2

    (2) statement_list -> statement .

    SETXY           reduce using rule 2 (statement_list -> statement .)
    FORWARD         reduce using rule 2 (statement_list -> statement .)
    BACK            reduce using rule 2 (statement_list -> statement .)
    RIGHT           reduce using rule 2 (statement_list -> statement .)
    LEFT            reduce using rule 2 (statement_list -> statement .)
    SETX            reduce using rule 2 (statement_list -> statement .)
    SETY            reduce using rule 2 (statement_list -> statement .)
    SETH            reduce using rule 2 (statement_list -> statement .)
    SPEED           reduce using rule 2 (statement_list -> statement .)
    SETPS           reduce using rule 2 (statement_list -> statement .)
    SETPC           reduce using rule 2 (statement_list -> statement .)
    SETBC           reduce using rule 2 (statement_list -> statement .)
    PENUP           reduce using rule 2 (statement_list -> statement .)
    PENDOWN         reduce using rule 2 (statement_list -> statement .)
    SHOW            reduce using rule 2 (statement_list -> statement .)
    HIDE            reduce using rule 2 (statement_list -> statement .)
    HOME            reduce using rule 2 (statement_list -> statement .)
    CLEAN           reduce using rule 2 (statement_list -> statement .)
    RESET           reduce using rule 2 (statement_list -> statement .)
    REPEAT          reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    IFELSE          reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    DO              reduce using rule 2 (statement_list -> statement .)
    MAKE            reduce using rule 2 (statement_list -> statement .)
    TO              reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBR             reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)


state 3

    (3) statement -> instruction .

    SETXY           reduce using rule 3 (statement -> instruction .)
    FORWARD         reduce using rule 3 (statement -> instruction .)
    BACK            reduce using rule 3 (statement -> instruction .)
    RIGHT           reduce using rule 3 (statement -> instruction .)
    LEFT            reduce using rule 3 (statement -> instruction .)
    SETX            reduce using rule 3 (statement -> instruction .)
    SETY            reduce using rule 3 (statement -> instruction .)
    SETH            reduce using rule 3 (statement -> instruction .)
    SPEED           reduce using rule 3 (statement -> instruction .)
    SETPS           reduce using rule 3 (statement -> instruction .)
    SETPC           reduce using rule 3 (statement -> instruction .)
    SETBC           reduce using rule 3 (statement -> instruction .)
    PENUP           reduce using rule 3 (statement -> instruction .)
    PENDOWN         reduce using rule 3 (statement -> instruction .)
    SHOW            reduce using rule 3 (statement -> instruction .)
    HIDE            reduce using rule 3 (statement -> instruction .)
    HOME            reduce using rule 3 (statement -> instruction .)
    CLEAN           reduce using rule 3 (statement -> instruction .)
    RESET           reduce using rule 3 (statement -> instruction .)
    REPEAT          reduce using rule 3 (statement -> instruction .)
    IF              reduce using rule 3 (statement -> instruction .)
    IFELSE          reduce using rule 3 (statement -> instruction .)
    WHILE           reduce using rule 3 (statement -> instruction .)
    DO              reduce using rule 3 (statement -> instruction .)
    MAKE            reduce using rule 3 (statement -> instruction .)
    TO              reduce using rule 3 (statement -> instruction .)
    STRING          reduce using rule 3 (statement -> instruction .)
    PRINT           reduce using rule 3 (statement -> instruction .)
    $end            reduce using rule 3 (statement -> instruction .)
    RBR             reduce using rule 3 (statement -> instruction .)
    END             reduce using rule 3 (statement -> instruction .)


state 4

    (4) statement -> repeat_statement .

    SETXY           reduce using rule 4 (statement -> repeat_statement .)
    FORWARD         reduce using rule 4 (statement -> repeat_statement .)
    BACK            reduce using rule 4 (statement -> repeat_statement .)
    RIGHT           reduce using rule 4 (statement -> repeat_statement .)
    LEFT            reduce using rule 4 (statement -> repeat_statement .)
    SETX            reduce using rule 4 (statement -> repeat_statement .)
    SETY            reduce using rule 4 (statement -> repeat_statement .)
    SETH            reduce using rule 4 (statement -> repeat_statement .)
    SPEED           reduce using rule 4 (statement -> repeat_statement .)
    SETPS           reduce using rule 4 (statement -> repeat_statement .)
    SETPC           reduce using rule 4 (statement -> repeat_statement .)
    SETBC           reduce using rule 4 (statement -> repeat_statement .)
    PENUP           reduce using rule 4 (statement -> repeat_statement .)
    PENDOWN         reduce using rule 4 (statement -> repeat_statement .)
    SHOW            reduce using rule 4 (statement -> repeat_statement .)
    HIDE            reduce using rule 4 (statement -> repeat_statement .)
    HOME            reduce using rule 4 (statement -> repeat_statement .)
    CLEAN           reduce using rule 4 (statement -> repeat_statement .)
    RESET           reduce using rule 4 (statement -> repeat_statement .)
    REPEAT          reduce using rule 4 (statement -> repeat_statement .)
    IF              reduce using rule 4 (statement -> repeat_statement .)
    IFELSE          reduce using rule 4 (statement -> repeat_statement .)
    WHILE           reduce using rule 4 (statement -> repeat_statement .)
    DO              reduce using rule 4 (statement -> repeat_statement .)
    MAKE            reduce using rule 4 (statement -> repeat_statement .)
    TO              reduce using rule 4 (statement -> repeat_statement .)
    STRING          reduce using rule 4 (statement -> repeat_statement .)
    PRINT           reduce using rule 4 (statement -> repeat_statement .)
    $end            reduce using rule 4 (statement -> repeat_statement .)
    RBR             reduce using rule 4 (statement -> repeat_statement .)
    END             reduce using rule 4 (statement -> repeat_statement .)


state 5

    (5) statement -> if_statement .

    SETXY           reduce using rule 5 (statement -> if_statement .)
    FORWARD         reduce using rule 5 (statement -> if_statement .)
    BACK            reduce using rule 5 (statement -> if_statement .)
    RIGHT           reduce using rule 5 (statement -> if_statement .)
    LEFT            reduce using rule 5 (statement -> if_statement .)
    SETX            reduce using rule 5 (statement -> if_statement .)
    SETY            reduce using rule 5 (statement -> if_statement .)
    SETH            reduce using rule 5 (statement -> if_statement .)
    SPEED           reduce using rule 5 (statement -> if_statement .)
    SETPS           reduce using rule 5 (statement -> if_statement .)
    SETPC           reduce using rule 5 (statement -> if_statement .)
    SETBC           reduce using rule 5 (statement -> if_statement .)
    PENUP           reduce using rule 5 (statement -> if_statement .)
    PENDOWN         reduce using rule 5 (statement -> if_statement .)
    SHOW            reduce using rule 5 (statement -> if_statement .)
    HIDE            reduce using rule 5 (statement -> if_statement .)
    HOME            reduce using rule 5 (statement -> if_statement .)
    CLEAN           reduce using rule 5 (statement -> if_statement .)
    RESET           reduce using rule 5 (statement -> if_statement .)
    REPEAT          reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    IFELSE          reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    DO              reduce using rule 5 (statement -> if_statement .)
    MAKE            reduce using rule 5 (statement -> if_statement .)
    TO              reduce using rule 5 (statement -> if_statement .)
    STRING          reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    RBR             reduce using rule 5 (statement -> if_statement .)
    END             reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> ifelse_statement .

    SETXY           reduce using rule 6 (statement -> ifelse_statement .)
    FORWARD         reduce using rule 6 (statement -> ifelse_statement .)
    BACK            reduce using rule 6 (statement -> ifelse_statement .)
    RIGHT           reduce using rule 6 (statement -> ifelse_statement .)
    LEFT            reduce using rule 6 (statement -> ifelse_statement .)
    SETX            reduce using rule 6 (statement -> ifelse_statement .)
    SETY            reduce using rule 6 (statement -> ifelse_statement .)
    SETH            reduce using rule 6 (statement -> ifelse_statement .)
    SPEED           reduce using rule 6 (statement -> ifelse_statement .)
    SETPS           reduce using rule 6 (statement -> ifelse_statement .)
    SETPC           reduce using rule 6 (statement -> ifelse_statement .)
    SETBC           reduce using rule 6 (statement -> ifelse_statement .)
    PENUP           reduce using rule 6 (statement -> ifelse_statement .)
    PENDOWN         reduce using rule 6 (statement -> ifelse_statement .)
    SHOW            reduce using rule 6 (statement -> ifelse_statement .)
